Added class to handle ontologies by using OWL Api to utils
- Also fixed deprecated usage of getInstance in TimeFunctionFactory